--- a/src/app/components/products/product/product.component.html
+++ b/src/app/components/products/product/product.component.html
@@ -1,3 +1,51 @@
-<p>
-  product works!
-</p>
+<div class="card mt-5">
+  <div class="card-body">
+    <form #productForm="ngForm" (ngSubmit)="onSubmit(productForm)">
+        <div class="form-group">
+          <input type="text"
+              class="form-control"
+              name="name"
+              #name="ngModel"
+              [(ngModel)]="productService.selectedProduct.name"
+              placeholder="Agrega nombre del producto"
+          >
+        </div>
+        <div class="form-group">
+            <input type="text"
+              class="form-control"
+              name="category"
+              #category="ngModel"
+              [(ngModel)]="productService.selectedProduct.category"
+              placeholder="Agrega a la categoría del producto"
+            >
+        </div>        
+        <div class="form-group">
+              <input type="text"
+                class="form-control"
+                name="location"
+                #location="ngModel"
+                [(ngModel)]="productService.selectedProduct.location"
+                placeholder="Agrega la ubicacion del producto"
+              >
+        </div>
+        <div class="form-group">
+          <input type="text"
+                    class="form-control"
+                    name="price"
+                    #price="ngModel"
+                    [(ngModel)]="productService.selectedProduct.price"
+                    placeholder="Agrega el precio del producto"
+            >
+        </div>
+        <div class="form-Group">
+          <button class="btn btn-primary" type="submit">
+            <i class="fas fa-plus-circle"></i>Add Producto
+          </button>  
+          <button class="btn btn-secondary" type="reset">
+            <i class="fas fa-sync-alt"></i>Limpia Producto
+          </button>  
+        </div>
+    </form>
+
+  </div>
+</div>
