--- a/src/app/components/products/product-list/product-list.component.html
+++ b/src/app/components/products/product-list/product-list.component.html
@@ -1,3 +1,23 @@
-<p>
-  products-list works!  
-</p>
+<div class="card">
+  <div class="card-body">
+    <h6 class="text-center">Lista de Productos</h6 >
+        <table class="table table-sm  table-hover">
+            <body>
+              <tr *ngFor ="let product of productList">
+                <td>{{product.name}}</td>
+                <td>{{product.category}}</td>               
+                <td>{{product.price}}</td>               
+             
+                <td>
+                  <a class="btn btn-secondary text-white "  (click)="onEdit(product)" >
+                      <i class="far fa-edit"></i>
+                  </a>
+                  <a class="btn btn-danger text-white " (click)="ondelete(product.$key)">
+                    <i class="fas fa-trash-alt"></i>
+                </a>  
+                </td>
+              </tr> 
+            </body>
+        </table>    
+  </div>
+</div>
