--- a/src/app/components/products/product/product.component.html
+++ b/src/app/components/products/product/product.component.html
@@ -41,7 +41,7 @@
           <button class="btn btn-primary" type="submit">
             <i class="fas fa-plus-circle"></i>Add Producto
           </button>  
-          <button class="btn btn-secondary" type="reset">
+          <button class="btn btn-secondary" type="reset" (click)="resetForm(productForm)">
             <i class="fas fa-sync-alt"></i>Limpia Producto
           </button>  
         </div>
