--- a/src/app/components/products/product-list/product-list.component.html
+++ b/src/app/components/products/product-list/product-list.component.html
@@ -12,7 +12,7 @@
                   <a class="btn btn-secondary text-white "  (click)="onEdit(product)" >
                       <i class="far fa-edit"></i>
                   </a>
-                  <a class="btn btn-danger text-white " (click)="ondelete(product.$key)">
+                  <a class="btn btn-danger text-white " (click)="onDelete(product.$key)">
                     <i class="fas fa-trash-alt"></i>
                 </a>  
                 </td>
