--- a/src/app/components/products/product/product.component.html
+++ b/src/app/components/products/product/product.component.html
@@ -1,9 +1,7 @@
 <div class="card mt-5">
   <div class="card-body">
-    <form #productForm="ngForm" (ngSubmit)="onSubmit(productForm)">
-
-      <input type="hidden" name="$key" #$key="ngModel" [(ngModel)]="productService.selectedProduct.$keys">
-
+    <form #productForm="ngForm" (ngSubmit)="onSubmit(productForm)">      
+      <input type="hidden" name="$key" #$key="ngModel" [(ngModel)]="productService.selectedProduct.$key">
       <div class="form-group">
           <input type="text"
               class="form-control"
